<resources>
    <string name="app_name">Remotify</string>
    <string name="ip">IP Address</string>
    <string name="port">Port </string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting...</string>
    <string name="reconnect">Reconnect..</string>
    <string name="probleminsocket">Problem Occured please check IP or port no</string>
    <string name="emptyField">One or More Field is Empty</string>
    <string name="noNetwork">Please Check Your Connection Before Connecting</string>
    <string name="noConnection">Please Connect to a Network Before Connecting</string>
    <string name="timeOut">Socket Timeout check your Connection</string>
    <string name="streamDisconnected">Stream is Disconnected Kindly Reconnect Again</string>

    <string name="navigationbar_open">Navigation Bar Open</string>

    <string name="navigationbar_close">Navigation Bar Close</string>

    <string name="disconnect">Disconnect</string>

    <string name="about">About Project</string>

    <string name="liveScreen">Live Screen</string>
    <string name="controlMouse">Mouse</string>
    <string name="controlKeyboard">KeyBoard</string>
    <string name="powerControl">Power</string>
    <string name="cmd">Command Prompt</string>
    <string name="cortana">Cortana</string>
    <string name="music">Music</string>
    <string name="liveScreenandmouse">Live Screen + Mouse</string>


    <string name="shutdown">Shutdown</string>

    <string name="restart">Restart</string>

    <string name="sleep">Sleep</string>
    <string name="connected">Connected</string>
    <string name="hello_blank_fragment">Created by:
    Harsh Saini(151294)
    Anshit Hayaran(151239)
    Sakar Kardekar(151375)</string>
</resources>
